<resources>
    <string name="app_name">Dict-A-Phone</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="SearchText">Search:</string>
    <string name="title">Dict-A-Phone</string>
    <string name="searchHint">Enter a word to look up</string>
    <string name="result_label">Results:</string>
    <string name="results_none">None</string>
    <string name="title_activity_front_page">Dict-A-Phone</string>
    <string name="about_button">About</string>
    <string name="options_button">Options</string>
    <string name="launch_search_button">Find Definitions</string>
    <string name="subtitle">a dictionary on your phone</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="options_label">Options</string>
    <string name="red_label">Red</string>
    <string name="blue_label">Blue</string>
    <string name="green_label">Green</string>
    <string name="welcome_toast">Welcome to Dict-A-Phone!</string>
    <string name="set_bg_color">Set BG Color</string>
    <string name="reset_bg_color">Reset BG Color</string>
    <string name="back_button">Back</string>
    <string name="custom_bg_value_key">custom_bg</string>
    <string name="saved_preferences_file">SavedColor</string>
</resources>
