<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.dlefh3.android.dict_a_phone.activities.FrontPage"
                android:background="@color/projectBackgroundColor"
                android:columnCount="3"
                android:rowCount="3"

                android:padding="5dp"
                android:orientation="vertical"
                android:gravity="top|center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/titleTextView"
        android:layout_weight="0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/subtitle"
        android:id="@+id/subtitleTextView"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/launch_search_button"
        android:id="@+id/searchButton"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:background="@android:color/darker_gray"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/options_button"
        android:id="@+id/optionsButton"
        android:drawableLeft="@android:drawable/ic_menu_preferences"
        android:background="@android:color/darker_gray"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:id="@+id/aboutButton"
        android:drawableLeft="@android:drawable/ic_menu_info_details"
        android:background="@android:color/darker_gray"
        android:layout_margin="5dp"/>

</LinearLayout>
