<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/optionsRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.dlefh3.android.dict_a_phone.activities.OptionsActivity"
                android:background="@color/projectBackgroundColor">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/options_label"
        android:id="@+id/optionsLabelTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Set Background Color"
        android:id="@+id/setBGLabelTextView"
        android:layout_below="@+id/optionsLabelTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/setBGLabelTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/red_label"
                android:id="@+id/redLabelTextView"
                android:layout_gravity="center"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/redSeekBar"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="255"
                android:indeterminate="false"/>

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/redEditText"
                android:background="@color/background_floating_material_light"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/blue_label"
                android:id="@+id/blueLableTextView"
                android:layout_gravity="center"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/blueSeekBar"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="255"
                android:indeterminate="false" />


            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/blueEditText"
                android:background="@color/background_floating_material_light"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/green_label"
                android:id="@+id/greenLableTextView"
                android:layout_gravity="center"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/greenSeekBar"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="255"
                android:indeterminate="false" />

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/greenEditText"
                android:background="@color/background_floating_material_light"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Preview"
            android:id="@+id/previewTextView"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="0.06"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/set_bg_color"
            android:id="@+id/setBGColorButton"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_bg_color"
            android:id="@+id/resetBGColorButton"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:id="@+id/backButton"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray"
            android:padding="5dp"
            android:layout_margin="5dp"/>

    </LinearLayout>

</RelativeLayout>
